--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ build/Release
 
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
-*node_modules
+node_modules/
 
 .DS_STORE
 *DS_STORE
